# sigil

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  benchmarks-rust-v-cyrius.md  codecov.yml  cyrius.cyml  cyrius.toml  deny.toml  issue-to-repair.md
.github/workflows/: ci.yml  release.yml
benches/: history.csv  sigil_benchmarks.rs
docs/: doc-health.md  sources.md
docs/adr/: 0001-retain-batch-mutex-until-caller-scratch.md  0002-mldsa-cmdline-gate.md  0003-bump-alloc-drift-acceptable-until-3-6.md  0004-per-lane-zeroization-for-banked-crypto-arrays.md  0005-keep-karatsuba-u256-mul-full.md  0006-park-ec-scalarmul-10ms-target.md  0007-auto-banking-for-concurrent-tls.md  README.md  template.md
docs/architecture/: 001-var-array-static-semantics.md  README.md  overview.md
docs/audit/: 2026-04-13-audit.md  2026-05-01-audit.md  2026-05-21-audit.md  2026-05-22-3.4.0-audit.md  2026-05-22-3.4.1-audit.md  2026-05-22-3.4.2-audit.md  2026-05-22-audit.md  2026-05-23-3.4.3-audit.md  2026-05-23-audit.md  2026-05-24-audit.md  2026-05-25-audit.md  2026-05-26-audit.md  2026-05-27-3.5-arc-audit.md  2026-05-27-3.5.0-audit.md  2026-05-27-3.5.1-audit.md  2026-05-27-3.5.2-audit.md  2026-05-27-3.5.3-audit.md  2026-05-28-3.5.7-aes128-gcm-audit.md  2026-05-28-3.5.8-privkey-parsers-audit.md  2026-05-28-3.5.9-ecdsa-sign-audit.md  2026-06-03-3.6.0-parallel-verify-audit.md  2026-06-03-3.6.1-tls12-prf-audit.md  2026-06-03-3.6.2-rsa-verify-audit.md  2026-06-03-3.6.3-rsa-keys-sign-audit.md  2026-06-03-3.6.4-rsa-hardening-audit.md  2026-06-04-3.5.6-hmac-hkdf-sha384-audit.md  2026-06-04-3.6.5-pss-x509-rsa-audit.md  2026-06-04-3.6.6-montgomery-pem-rsak-audit.md  (+13 more)
fuzz/: Cargo.toml  fuzz_ed25519.fcyr  fuzz_integrity.fcyr  fuzz_revocation.fcyr
fuzz/fuzz_targets/: audit_event.rs  audit_log_jsonl.rs  crl.rs  integrity_snapshot.rs  key_version.rs  revocation_list.rs  trust_policy.rs  trusted_artifact.rs
lib/: alloc.cyr  bigint.cyr  hashmap.cyr  io.cyr  json.cyr  process.cyr  str.cyr  syscalls.cyr  syscalls_aarch64_linux.cyr  syscalls_x86_64_linux.cyr
programs/: smoke.cyr  win_entropy_probe.cyr
rust-old/: Cargo.toml  audit.rs  chain.rs  error.rs  policy.rs  tests.rs  trust.rs  types.rs  verify.rs
scripts/: bench-history.sh  bundle.sh  check.sh  regen-dist.sh  sgx-verify-full-fixture.out  snp-verify-full-fixture.out  tdx-verify-full-fixture.out
src/: aes_gcm.cyr  aes_ni.cyr  argon2.cyr  audit.cyr  audit.rs  authenticode.cyr  bigint_ext.cyr  bignum.cyr  blake2b.cyr  certpin.cyr  certpin_core.cyr  chacha20.cyr  chacha20poly1305.cyr  chain.rs  crypto_scratch.cyr  ct.cyr  dmverity.cyr  ecdsa_p256.cyr  ecdsa_p384.cyr  ecdsa_sign.cyr  ed25519.cyr  efi_sigdb.cyr  error.cyr  hex.cyr  hkdf.cyr  hkdf_sha384.cyr  hmac.cyr  hmac_sha384.cyr  ima.cyr  ima_core.cyr  integrity.cyr  integrity.rs  lib.cyr  lib.rs  luks.cyr  mldsa.cyr  mldsa_encode.cyr  mldsa_ntt.cyr  mldsa_params.cyr  mldsa_poly.cyr  (+36 more)
(+104 files in other folders)
