[package]
name = "sigil"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Sigil — system-wide trust verification for AGNOS"
homepage = "https://github.com/MacCracken/sigil"
repository = "https://github.com/MacCracken/sigil"
readme = "README.md"
keywords = ["trust", "verification", "signing", "security", "integrity"]
categories = ["authentication", "cryptography"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3"
