[package]
name = "sigil-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sigil = { path = "..", features = ["integrity", "chain", "policy"] }

[[bin]]
name = "fuzz_trusted_artifact"
path = "fuzz_targets/trusted_artifact.rs"
doc = false

[[bin]]
name = "fuzz_revocation_list"
path = "fuzz_targets/revocation_list.rs"
doc = false

[[bin]]
name = "fuzz_key_version"
path = "fuzz_targets/key_version.rs"
doc = false

[[bin]]
name = "fuzz_integrity_snapshot"
path = "fuzz_targets/integrity_snapshot.rs"
doc = false

[[bin]]
name = "fuzz_audit_event"
path = "fuzz_targets/audit_event.rs"
doc = false

[[bin]]
name = "fuzz_crl"
path = "fuzz_targets/crl.rs"
doc = false

[[bin]]
name = "fuzz_trust_policy"
path = "fuzz_targets/trust_policy.rs"
doc = false

[[bin]]
name = "fuzz_audit_log_jsonl"
path = "fuzz_targets/audit_log_jsonl.rs"
doc = false
